switching with delete tag
